--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="w-full px-4 py-4 text-center">
             <ul class="block md:flex md:flex-row md:items-center md:justify-center">
               <li class="group mb-9 md:mb-0">
-                <a href="" class="mx-11 flex justify-center rounded-lg border border-black px-4 py-3 text-sm group-hover:bg-black group-hover:text-white" target="_blank">PORTFOLIO 1</a>
+                <a href="https://muhammadrizal23.github.io/" class="mx-11 flex justify-center rounded-lg border border-black px-4 py-3 text-sm group-hover:bg-black group-hover:text-white" target="_blank">PORTFOLIO 1</a>
               </li>
               <li class="group mb-9 md:mb-0">
                 <a href="" class="mx-11 flex justify-center rounded-lg border border-black px-4 py-3 text-sm group-hover:bg-black group-hover:text-white" target="_blank">PORTFOLIO 2</a>
